Show the separator only if there's html above

--- a/resources/sql_output.css
+++ b/resources/sql_output.css
@@ -36,6 +36,7 @@ hr {
   border-width: 1px;
   border-style: solid;
   border-color: var(--vscode-editorError-foreground);
+  display: none;
 }
 
 #error_message {
