Make it more obvious there's an error

--- a/resources/sql_output.css
+++ b/resources/sql_output.css
@@ -39,6 +39,10 @@ hr {
   display: none;
 }
 
+h3 {
+  color: var(--vscode-editorError-foreground);
+}
+
 #error_message {
   color: var(--vscode-editorError-foreground);
   overflow-y: scroll;
