--- a/resources/sql_output.css
+++ b/resources/sql_output.css
@@ -41,9 +41,12 @@ hr {
 
 h3 {
   color: var(--vscode-editorError-foreground);
+  margin-bottom: 0;
 }
 
 #error_message {
+  display: none;
+  margin-top: 10px;
   color: var(--vscode-editorError-foreground);
   overflow-y: scroll;
 }
